styles/index.css
@import "/styles/imports/variables.css";
@import "/styles/imports/links.css";

/* GENERAL */

body {
  box-sizing: border-box;
  height: 100vh;
  width: 100%;
  color: var(--text-color);
  font-family: "Josefin Sans", Verdana, Helvetica, sans-serif;
  margin: 0;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

/*Fonts, typography*/
p {
  font-family: "Josefin Sans", Verdana, Helvetica, sans-serif;
  font-size: 1.1rem;
  max-width: 41.87rem;
  line-height: 1.5rem;
  margin: 1rem 0rem 1.8rem 0rem;
}

h1,
h2,
h2 {
  font-family: "Yeseva One", Georgia, "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode";
  margin: 0;
}

h1 {
  display: grid;
  grid-column: -1/1;
  font-size: 1.4rem;
  text-transform: uppercase;
  margin-bottom: 1rem;
}

h2 {
  display: grid;
  grid-column: -1/1;
  font-size: 1.3rem;
}

/*Fonts specific*/

.h2-home {
  font-size: 1.2rem;
  text-transform: uppercase;
  margin: 2rem 0rem 1rem 2.6rem;
}

.heading-posts {
  display: block;
  margin-top: 0.3rem;
}

.review-specific-container h1 {
  padding-top: 1rem;
}

.p-uppercase,
h3,
.post-subheading {
  font-family: "Josefin Sans", sans-serif, Tahoma, Verdana;
  font-weight: 300;
  font-size: 1.1rem;
  text-transform: uppercase;
}

.copyright-p {
  display: flex;
  justify-content: right;
  padding: 2rem 0rem;
}

.publish-date-p {
  font-weight: 300;
  margin: 1.6rem 0rem 0rem 0rem;
}

.review-paragraphs h2 {
  margin-top: 0rem;
}

.subscribe-form h2 {
  margin: 1rem 0rem;
}

.recent-card h2 {
  font-size: 1.1rem;
  text-align: center;
}

.h2-about {
  margin-left: 0rem;
}

.color-p {
  background-color: var(--cta-light-color);
  padding: 0.6rem;
  width: fit-content;
}

.to-top p,
.copyright-p {
  max-width: 100%;
}

/* UTILITIES */

li {
  list-style: none;
}

.breadcrumbs {
  display: flex;
  padding: 0;
}

.breadcrumb {
  padding-right: 1rem;
}

/* GLOBAL */

/*Containers and cards*/

.body-container {
  max-width: 1400px;
  margin: 0 auto;
}

.content-container,
.content-container-home {
  margin: 0rem 0.8rem;
}
.content-container {
  padding-top: 7.5rem;
}

.color-card,
.synopsis {
  max-width: 465px;
  background-color: var(--cards-color);
  padding: 1rem 0.6rem;
  margin: 0rem 0rem 1.5rem 0rem;
}

.review-card {
  max-width: 465px;
  padding: 1rem;
}

.favorites-categories {
  display: grid;
  grid-template-columns: 1fr 1.6fr;
  gap: 1.5rem;
}

.subscribe-form,
.review-card,
.recent-card {
  border: 2px solid #ffff;
  border-radius: 5px;
  box-shadow: 0 5px 12px rgba(163, 118, 118, 0.15);
}

.subscribe-form {
  margin: 4rem 0rem 2rem 0rem;
  padding: 1rem;
}

.subscribe-form input {
  margin: 0.5rem 0rem;
}

.flex-para {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.review-specific-container,
.about-grid {
  display: grid;
  max-width: 465px;
  gap: 1.5rem;
}

/*Header and nav*/

.logo {
  display: block;
  width: 8.5rem;
  height: auto;
  object-fit: contain;
}

nav a {
  display: block;
  text-transform: uppercase;
  text-decoration: none;
  padding: 1.5rem 1rem;
  cursor: pointer;
}

.nav-header {
  display: flex;
  flex-wrap: wrap;
  z-index: 1200;
  background: #ffff;
  position: fixed;
  top: 0;
  width: 100%;
  height: 5rem;
  justify-content: space-between;
  padding: 0.8rem 0.6rem 0rem 0.6rem;
}

.hamburger-icon {
  display: none;
}

.line {
  display: block;
  height: 2.2px;
  width: 1.8rem;
  margin: 0.3rem auto;
  background-color: var(--text-color);
  -webkit-transition: all 0.28s ease-in-out;
  transition: all 0.28s ease-in-out;
}

.menu-links {
  display: flex;
  align-items: center;
}

/*Images*/
img {
  width: 100%;
  height: auto;
  object-fit: cover;
}

/*Hover and focus styles*/

.review-img:hover,
.review-img:focus,
.profile-img:hover,
.profile-img:focus {
  filter: brightness(0.6);
}

.recent-card:hover,
.recent-card:focus,
.review-card:hover,
.review-card:focus {
  box-shadow: 0 5px 12px rgba(163, 118, 118, 0.5);
}

/*Icons*/

.fa-brands,
.fa-solid {
  color: var(--icon-color);
  font-size: 2rem;
  padding-top: 1rem;
  cursor: pointer;
}

.fa-circle-xmark {
  display: flex;
  z-index: 1;
  flex-direction: column;
  align-items: center;
  right: 3rem;
  padding-top: 3rem;
  position: absolute;
  background-color: rgb(234, 234, 234, 0.9);
}

.to-top {
  display: flex;
  flex-direction: column;
  text-align: -webkit-center;
  text-align: -moz-center;
}

/*Loader*/

.loader {
  display: block;
  border: 1rem solid var(--cards-color);
  border-top: 1rem solid var(--icon-color);
  border-radius: 50%;
  width: 7rem;
  height: 7rem;
  margin: 0 auto;
  animation: spin 1.8s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}
/*Footer*/

footer {
  border-top: 1px solid var(--text-color);
  margin: 1rem;
}

.footer-section {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.footer-div {
  display: flex;
  flex-direction: column;
}

.footer-div a {
  text-transform: capitalize;
  padding: 0.6rem 0rem;
}

/* HOME page */

.welcome-header {
  display: block;
  background: url(/images/header1.jpg);
  background-size: cover;
  min-height: 8rem;
  padding-top: 6rem;
}

.welcome-box {
  display: inline-block;
  background-color: rgba(255, 255, 255, 0.8);
  margin: 0 auto;
  padding: 0.9rem 0.5rem;
  margin-top: 5rem;
}

.welcome-text {
  font-family: "Josefin Sans", Verdana, Helvetica, sans-serif;
  font-size: 1.4rem;
  font-weight: 300;
  text-transform: none;
  margin: 0rem;
  padding-top: 0rem;
}

/*Carousel slider, recent-card*/

.posts-slider-wrap {
  display: inline-flex;
  width: 100%;
  gap: 0.6rem;
  align-items: center;
}

.posts-slider-container {
  display: flex;
  gap: 0.8rem;
  scroll-behavior: smooth;
  position: relative;
  font-size: 1.3rem;
}

.posts-slider-container::-webkit-scrollbar {
  display: none;
}

.recent-card {
  position: relative;
  overflow: hidden;
  min-width: 95%;
  margin-bottom: 1rem;
}

.recent-card-text {
  max-width: 85%;
  margin: 0rem auto;
}

.recent-card:hover,
#arrow-right,
#arrow-left {
  cursor: pointer;
}

/*About section*/

.profile-img {
  display: block;
  width: 80%;
  border-radius: 50%;
}

.about-grid-homepage {
  background-color: var(--cards-color);
  width: 100%;
  padding: 2rem;
  border-radius: 5px;
}

/* CONTACT page */

.form-error {
  display: none;
  color: red;
  font-weight: 300;
  margin-top: 0.6rem;
}

.validation-container {
  display: none;
  font-size: 1.8rem;
  background-color: var(--icon-color);
  max-width: 20rem;
  margin-bottom: 1.5rem;
  padding: 1.5rem;
  font-weight: 300;
  text-align: center;
}

input,
textarea {
  display: block;
  width: 100%;
  height: 3.5rem;
  font-size: 1.3rem;
  color: var(--text-color);
  margin: 0.5rem 0rem 2rem 0rem;
}

.contact-info {
  display: grid;
  gap: 1.8rem;
}

.contact-info a {
  font-size: 1.26rem;
  margin-left: 1rem;
}

.contact-section h2 {
  margin-top: 2rem;
}

label {
  font-size: 1.3rem;
  color: var(--text-color);
}

.message {
  height: 8rem;
}

.form-requirements {
  font-size: 16px;
}

.contact-form {
  margin-top: 1.6rem;
}

/* BLOG page */

/* BLOG SPECIFIC page */

/*Modal*/
.image-modal {
  z-index: 1300;
  display: none;
  width: 100%;
  height: 100%;
  position: fixed;
  background-color: rgb(234, 234, 234, 0.9);
  top: 0rem;
  left: 0rem;
}

.image-modal img {
  width: 620px;
  height: auto;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/*review specific container*/
.review-paragraphs p,
.synopsis p,
.p-space {
  margin: 1.8rem 0rem;
}

.image-review {
  cursor: pointer;
}

/* ABOUT page */

